...
    onEditClicked: ((Device) -> Unit)? = null,
) {
    Card(
        modifier = modifier
            .clickable(onClick = { onClicked(device) })
            .defaultMinSize(minWidth, minHeight)
            .testTag("DeviceItemCard"),
    ) {
        Box(
            modifier = Modifier
                .weight(1f)
                .fillMaxWidth()
        ) {
...
